feat(mobile): Added support for mobile devices
diff --git a/.gitignore b/.gitignore
index 391f4d4..a542d8e 100644
--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 ### JetBrains IDEs
 *.iml

+# Environment Variables
+/.env
+/.env.*
+
 ### Git hooks
 /.husky/*/

@@ -10,3 +14,7 @@

 # Dependencies
 node_modules/
+.vercel
+
+# Flags
+/src/lib/flags/generated/
diff --git a/.idea/biome.xml b/.idea/biome.xml
deleted file mode 100644
index 9731b7c..0000000
--- a/.idea/biome.xml
+++ /dev/null
@@ -1,6 +0,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project version="4">
-  <component name="BiomeSettings">
-    <option name="sortImportOnSave" value="true" />
-  </component>
-</project>
\ No newline at end of file
diff --git a/.vercelignore b/.vercelignore
index da016eb..8116f25 100644
--- a/.vercelignore
+++ b/.vercelignore
@@ -4,6 +4,10 @@
 /.idea/
 /.zed/

+### Repository Meta
+/.github/
+/docs/
+
 ### Git hooks
 /.husky/
 /commitlint.config.ts
diff --git a/next.config.ts b/next.config.ts
index f460d00..33bbebe 100644
--- a/next.config.ts
+++ b/next.config.ts
@@ -1,4 +1,5 @@
 import type { NextConfig } from "next";
+import createVercelToolbar from "@vercel/toolbar/plugins/next";

 // import createMDX from "@next/mdx";

@@ -49,9 +50,11 @@ const nextConfig: NextConfig = {
   }
 };

+const withVercelToolbar = createVercelToolbar();
+
 // const withMDX = createMDX({
 //   extension: /\.mdx?$/,
 // });

-export default nextConfig;
 // export default withMDX(nextConfig);
+export default withVercelToolbar(nextConfig);
diff --git a/package.json b/package.json
index bbd6398..5df97dc 100644
--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "gen": "rm -rf src/lib/flags/generated; pnpx hypertune; next typegen",
     "dev": "next dev",
-    "build": "next build",
+    "build": "rm -rf src/lib/flags/generated; pnpx hypertune; next build",
     "start": "next start",
     "lint": "biome check",
     "format": "biome fo

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "gen": "rm -rf src/lib/flags/generated; pnpx hypertune; next typegen",
     "dev": "next dev",
-    "build": "next build",
+    "build": "rm -rf src/lib/flags/generated; pnpx hypertune; next build",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
