--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "source": "/",
       "destination": "https://github.com/AlphaKR93"
+    },
+    {
+      "source": "/:path*",
+      "destination": "https://github.com/AlphaKR93"
     }
   ]
 }
